Optimize font loading and image dimensions

--- a/templates/ja/index.html
+++ b/templates/ja/index.html
@@ -195,7 +195,8 @@
 
                 <figure style="text-align: center;">
                     <p><a href="https://doi.org/10.1080/17452759.2024.2400330">
-                            <img src="../../static/GraphicalAbstract1.png" alt="GraphicalAbstract1" width="650">
+                            <img src="../../static/GraphicalAbstract1.png" alt="GraphicalAbstract1" width="650"
+                                height="464">
                         </a>
                     </p>
                     <figcaption><strong>Figure
