Optimize image dimensions and update preload link in index.html and templates/ja/index.html

--- a/templates/ja/index.html
+++ b/templates/ja/index.html
@@ -28,7 +28,7 @@
     <meta property="og:image" content="static/web_screenshot.png">
     <link href="../../static/home.png" rel="icon">
     <link href="../../static/styles.css" rel="stylesheet">
-    <link rel="preload" href="../../static/printability_setup.png" as="image">
+    <link rel="preload" href="static/GraphicalAbstract1.png" as="image">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
