--- a/static/styles.css
+++ b/static/styles.css
@@ -15176,6 +15176,7 @@ body.dark #newsBox {
     bottom: 20px;
     right: 20px;
     display: none;
+    z-index: 1000;
 }
 
 body.dark .back-to-top {
