--- a/templates/common/projects.html
+++ b/templates/common/projects.html
@@ -45,7 +45,7 @@
                     <div class="top-bar">
                         <span>Projects</span>
                         <button id="theme-toggler" class="theme-button">
-                            <i id="theme-icon" class="fas fa-moon" style="color: #f4d640;"></i>
+                            <i id="theme-icon" class="fas fa-moon" style="color: #ffbe3c;"></i>
                         </button>
                     </div>
 
