Optimize copyright footer in HTML templates

--- a/templates/common/projects.html
+++ b/templates/common/projects.html
@@ -120,9 +120,8 @@
                     <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript"><i
                             class="fa-brands fa-square-js"></i></a>
                     <footer>
-                        <span style="font-size: smaller;"><i class="fa-regular fa-copyright"></i> 2024 KORINZ. All
-                            rights
-                            reserved.</span>
+                        <span style="font-size: smaller;"><i class="fa-regular fa-copyright"></i> 2024
+                            <a href="https://github.com/KORINZ">KORINZ</a>. All rights reserved.</span>
                     </footer>
                 </nav>
 
