Optimize link in gallery.html for traveling section

--- a/templates/common/gallery.html
+++ b/templates/common/gallery.html
@@ -130,7 +130,10 @@
             </aside>
 
             <main class="col-lg">
-                <h2><i class="fa-solid fa-compass"></i> 旅行 (Traveling)</h2>
+                <h2><i class="fa-solid fa-compass"></i> 旅行 (Traveling) <a
+                        href="https://uub.jp/j.cgi/lIzehcaIzTnIfTenIipoIIipq/%E3%82%B3%E3%83%AA%E3%83%B3"><i
+                            class="fa-solid fa-external-link"></i></a>
+                </h2>
                 <figure class="gallery-image figure-container">
                     <ul class="figure-ul">
                         <li class="figure-li">
