Add GitHub repository link to research page

--- a/templates/common/research.html
+++ b/templates/common/research.html
@@ -159,9 +159,16 @@
                         href="https://doi.org/10.1080/17452759.2024.2400330">https://doi.org/10.1080/17452759.2024.2400330</a>.
                     <i class="fa-solid fa-unlock" style="color: #fba52d;"></i> Open Access.
 
+                    <br>
+                    <br>
+                    <i class="fa-brands fa-square-github"></i>
+                    GitHub Repository: <a
+                        href="https://github.com/KORINZ/in-silico-bioink-viability-prediction">https://github.com/KORINZ/in-silico-bioink-viability-prediction
+                    </a>
+
                 </p>
 
-                <a class="custom-button"
+                <a class=" custom-button"
                     href="../../assets/Machine learning-based prediction and optimisation framework for as-extruded cell viability in extrusion-based 3D bioprinting.pdf"
                     target="_blank">
                     Open PDF in new tab
