--- a/templates/ja/index.html
+++ b/templates/ja/index.html
@@ -238,9 +238,15 @@
 
                 <h2>学会</h2>
                 <ol>
+                    <li>化学工学会第90年会、東京理科大学、2025年3月11日～14日<br>
+                        講演題目：<u>AIを用いた3Dバイオプリンティングにおける印刷性能最適化</u><br>
+                        (学)<b>Zhang Colin</b>・(学)Elvitigala Kelum・(正)境 慎司 <a
+                            href="https://www4.scej.org/meeting/90a/prog/progsearch.html?Ae=Zhang%20Colin"><i
+                                class="fas fa-external-link-alt"></i></a>
+                    </li>
                     <li>
                         化学工学会第55回秋季大会、北海道大学、2024年9月10日～13日<br>
-                        講演題目：機械学習を用いた押出型3Dバイオプリンティングにおける細胞生存率の予測モデリング <b>[<a
+                        講演題目：<u>機械学習を用いた押出型3Dバイオプリンティングにおける細胞生存率の予測モデリング</u> <b>[<a
                                 href="https://www.scej.org/news/detail/23235/"> 注目講演 (1130件中の22件)</a>]</b><br>
                         (学)<b>Zhang Colin</b>・(正)岡野 泰則・(正)境 慎司 <a
                             href="https://www4.scej.org/meeting/55f/prog/progsearch.html?Ae=Zhang%20Colin"><i
@@ -248,7 +254,7 @@
 
                     </li>
                     <li>化学工学会第53回秋季大会、信州大学、2022年9月14日～16日<br>
-                        講演題目：3D押し出しバイオプリンティングに関する流体せん断応力、印刷効率、細胞生存率に関する数値解析<br>
+                        講演題目：<u>3D押し出しバイオプリンティングに関する流体せん断応力、印刷効率、細胞生存率に関する数値解析</u><br>
                         (学)<b>Zhang Colin</b>・(学)日髙 光將・(正)小嶋 勝・(正)境 慎司・(正)岡野 泰則 <a
                             href="https://www4.scej.org/meeting/53f/prog/progsearch.html?Ae=Zhang%20Colin"><i
                                 class="fas fa-external-link-alt"></i></a>
