Add red panda image to gallery

--- a/templates/common/gallery.html
+++ b/templates/common/gallery.html
@@ -208,6 +208,9 @@
                         <li class="figure-li">
                             <img src="../../static/gallery/whale.jpeg" alt="whale" class="figure-img">
                         </li>
+                        <li class="figure-li">
+                            <img src="../../static/gallery/red_panda.jpeg" alt="whale" class="figure-img">
+                        </li>
 
                     </ul>
                 </figure>
