--- a/templates/ja/index.html
+++ b/templates/ja/index.html
@@ -200,28 +200,43 @@
                             <img src="../../static/GraphicalAbstract1.png" alt="GraphicalAbstract1" width="600">
                         </a>
                     </p>
-                    <figcaption><strong>Figure
-                            1. </strong>バイオプリンティング最適化のためのワークフロー:
-                        レオロジー試験で得られたインクの特性を基に、針の押出しプロセスの数値シミュレーションが行われ、その後、ライブ/デッド細胞生存率解析が実施されます。機械学習モデルは、細胞の種類、インクの粘度、押出しパラメータを統合し、細胞生存率を予測・最適化します。
+                    <figcaption style="text-align: left;"><strong>図1.
+                        </strong>バイオプリンティング最適化のためのワークフロー:
+                        レオロジー試験で得られたインクの特性を基に、針の押出しプロセスの数値シミュレーションが行われ、その後、ライブ/デッド細胞生存率解析が実施される。機械学習モデルは、細胞の種類、インクの粘度、押出しパラメータを統合し、細胞生存率を予測・最適化する。
                         <a href="https://www.biorender.com/">BioRender</a>で作成。
                     </figcaption>
+                </figure>
+                <figure style="text-align: center;">
+                    <p><a href="">
+                            <img src="../../static/GraphicalAbstract2.png" alt="GraphicalAbstract2" width="800">
+                        </a>
+                    </p>
+                    <figcaption style="text-align: left;"><strong>図2.
+                        </strong>AIを活用した印刷性能（プリンタビリティ）評価フレームワークの概要。アルギン酸（ALG）およびヒアルロン酸（HA）複合インクのレオロジー特性は、サポートベクター回帰（SVR）によってモデリングされ、レオロジー
+                        パラメータを予測する。回帰型のMLPモデルは、ハウスドルフ距離（HD）および細胞生存率を予測するために使用される。HD指標は、印刷構造と設計構造との幾何学的忠実度を定量的に評価し、回帰型CNNはグリッド画像からHD値を直接予測する。<a
+                            href="https://www.biorender.com/">BioRender</a>にて作成。</figcaption>
                 </figure>
 
                 <h2>論文</h2>
                 <ol>
-                    <li><b>Colin Zhang</b>, Kelum C. M. L. Elvitigala, Wildan Mubarok, Yasunori Okano, and Shinji Sakai.
+                    <li><b>Colin Zhang</b>, Kelum C. M. L. Elvitigala, Wildan Mubarok, Yasunori Okano, and Shinji
+                        Sakai.
                         (2024).
-                        Machine learning-based prediction and optimisation framework for as-extruded cell viability in
-                        extrusion-based 3D bioprinting. <i>Virtual and Physical Prototyping</i>, <i>19</i>(1), e2400330.
+                        Machine learning-based prediction and optimisation framework for as-extruded cell viability
+                        in
+                        extrusion-based 3D bioprinting. <i>Virtual and Physical Prototyping</i>, <i>19</i>(1),
+                        e2400330.
                         <br>
                         <a
                             href="https://doi.org/10.1080/17452759.2024.2400330">https://doi.org/10.1080/17452759.2024.2400330</a>.
                         <i class="fa-solid fa-unlock" style="color: #fba52d;"></i> Open Access.
                     </li>
 
-                    <li>Mitsuyuki Hidaka, Masaru Kojima, <b>Colin Zhang</b>, Yasunori Okano, and Shinji Sakai. (2024).
+                    <li>Mitsuyuki Hidaka, Masaru Kojima, <b>Colin Zhang</b>, Yasunori Okano, and Shinji Sakai.
+                        (2024).
                         Experimental and numerical approaches for optimizing conjunction area design to enhance
-                        switching efficiency in single-nozzle multi-ink bioprinting systems. <i>International Journal of
+                        switching efficiency in single-nozzle multi-ink bioprinting systems. <i>International
+                            Journal of
                             Bioprinting</i>, <i>10</i>(5), 4091.
                         <br>
                         <a href="https://doi.org/10.36922/ijb.4091">https://doi.org/10.36922/ijb.4091</a>.
@@ -274,7 +289,8 @@
                     <li><a
                             href="https://www.coursera.org/account/accomplishments/verify/9QC5KA9F9STU?utm_source=link&utm_medium=certificate&utm_content=cert_image&utm_campaign=pdf_header_button&utm_product=course">Mathematics
                             for Machine Learning: Linear Algebra <i class="fas fa-external-link-alt"></i></a></li>
-                    <li><a href="https://www.udemy.com/certificate/UC-5a9258b1-d5c0-4a32-85db-a622985fb445/">The Git &
+                    <li><a href="https://www.udemy.com/certificate/UC-5a9258b1-d5c0-4a32-85db-a622985fb445/">The Git
+                            &
                             Github Bootcamp <i class="fas fa-external-link-alt"></i></a></li>
                 </ul>
 
