Fix typo in research interests section on homepage

--- a/templates/ja/index.html
+++ b/templates/ja/index.html
@@ -163,7 +163,7 @@
                         href="https://ja.wikipedia.org/wiki/3D%E3%83%90%E3%82%A4%E3%82%AA%E3%83%97%E3%83%AA%E3%83%B3%E3%83%86%E3%82%A3%E3%83%B3%E3%82%B0"><i
                             class="fa-brands fa-wikipedia-w"></i></a></h2>
                 <p>
-                    3D押出式バイオプリンティングは、組織工学の分野で急速に発展しており、複雑で生物学的に構造化されたカスタマイズ可能な構造物を高精度で作製することを可能にしています。このプロセスにおける主な課題は、針の形状や押出パラメータの最適化、および細胞の生存率の維持です。数値解析や機械学習は、流体せん断応力、インクのレオロジー特性、押出速度などの要素を制御するためにますます活用されており、印刷適性の向上と印刷された構造内での細胞の生存率向上を目指しています。これらの計算手法と実験的検証の組み合わせは、組織再生や治療応用に向けた、より効果的なバイオプリンティングソリューションへの道を開くことが期待されています。
+                    3Dバイオプリンティングは、組織工学の分野で急速に発展しており、複雑で生物学的に構造化されたカスタマイズ可能な構造物を高精度で作製することを可能にしています。このプロセスにおける主な課題は、針の形状や押出パラメータの最適化、および細胞の生存率の維持です。数値解析や機械学習は、流体せん断応力、インクのレオロジー特性、押出速度などの要素を制御するためにますます活用されており、印刷適性の向上と印刷された構造内での細胞の生存率向上を目指しています。これらの計算手法と実験的検証の組み合わせは、組織再生や治療応用に向けた、より効果的なバイオプリンティングソリューションへの道を開くことが期待されています。
                 </p>
 
                 <figure style="text-align: center;">
