Update section title from '論文' to '学術論文' in index.html

--- a/templates/ja/index.html
+++ b/templates/ja/index.html
@@ -188,7 +188,7 @@
                             href="https://www.biorender.com/">BioRender</a>にて作成。</figcaption>
                 </figure>
 
-                <h2>論文</h2>
+                <h2>学術論文</h2>
                 <ol>
                     <li><b>Colin Zhang</b>, Kelum C. M. L. Elvitigala, Wildan Mubarok, Yasunori Okano, and Shinji
                         Sakai.
