Update publication entries for consistency and accuracy in index.html and research.html

--- a/templates/common/research.html
+++ b/templates/common/research.html
@@ -150,10 +150,10 @@
                     framework for as-extruded cell viability in extrusion-based 3D bioprinting (2024/09/11)</h3>
 
                 <p>
-                    <b>Colin Zhang</b>, Kelum C. M. L. Elvitigala, Wildan Mubarok, Yasunori Okano, and Shinji Sakai.
-                    (2024).
+                    <b>Colin Zhang</b>, Kelum Elvitigala, Wildan Mubarok, Yasunori Okano, and Shinji Sakai.
                     Machine learning-based prediction and optimisation framework for as-extruded cell viability in
-                    extrusion-based 3D bioprinting. <i>Virtual and Physical Prototyping</i>, <i>17</i>(1), e2400330.
+                    extrusion-based 3D bioprinting. <i>Virtual and Physical Prototyping</i> <b>19</b>, e2400330
+                    (2024).
                     <br>
                     <a
                         href="https://doi.org/10.1080/17452759.2024.2400330">https://doi.org/10.1080/17452759.2024.2400330</a>.
