--- a/templates/ja/index.html
+++ b/templates/ja/index.html
@@ -190,35 +190,30 @@
 
                 <h2>学術論文</h2>
                 <ol>
-                    <li><b>Colin Zhang</b>, Kelum C. M. L. Elvitigala, Wildan Mubarok, Yasunori Okano, and Shinji
-                        Sakai.
+                    <li><b>Colin Zhang</b>, Kelum Elvitigala, Wildan Mubarok, Yasunori Okano, and Shinji Sakai.
+                        Machine learning-based prediction and optimisation framework for as-extruded cell viability in
+                        extrusion-based 3D bioprinting. <i>Virtual and Physical Prototyping</i> <b>19</b>, e2400330
                         (2024).
-                        Machine learning-based prediction and optimisation framework for as-extruded cell viability
-                        in
-                        extrusion-based 3D bioprinting. <i>Virtual and Physical Prototyping</i>, <i>19</i>(1),
-                        e2400330.
                         <br>
                         <a
                             href="https://doi.org/10.1080/17452759.2024.2400330">https://doi.org/10.1080/17452759.2024.2400330</a>.
                         <i class="fa-solid fa-unlock" style="color: #fba52d;"></i> Open Access.
                     </li>
-
                     <li>Mitsuyuki Hidaka, Masaru Kojima, <b>Colin Zhang</b>, Yasunori Okano, and Shinji Sakai.
-                        (2024).
                         Experimental and numerical approaches for optimizing conjunction area design to enhance
-                        switching efficiency in single-nozzle multi-ink bioprinting systems. <i>International
-                            Journal of
-                            Bioprinting</i>, <i>10</i>(5), 4091.
+                        switching efficiency in single-nozzle multi-ink bioprinting systems. <i>International Journal of
+                            Bioprinting</i> <b>10</b>, 4091 (2024).
                         <br>
                         <a href="https://doi.org/10.36922/ijb.4091">https://doi.org/10.36922/ijb.4091</a>.
                         <i class="fa-solid fa-unlock" style="color: #fba52d;"></i> Open Access.
                     </li>
 
-                    <li>Wildan Mubarok, <b>Colin Zhang</b>, and Shinji Sakai. (2024). 3D Bioprinting of Sugar Beet
+                    <li>Wildan Mubarok, <b>Colin Zhang</b>, and Shinji Sakai. 3D Bioprinting of Sugar Beet
                         Pectin
-                        through Horseradish Peroxidase-Catalyzed Cross-Linking. <i>ACS Applied Bio Materials</i>,
-                        <i>7</i>(5), 3506-3514. <a
-                            href="https://doi.org/10.1021/acsabm.4c00418">https://doi.org/10.1021/acsabm.4c00418</a>.
+                        through Horseradish Peroxidase-Catalyzed Cross-Linking. <i>ACS Applied Bio Materials</i>
+                        <b>7</b>, 3506-3514 (2024).
+                        <br>
+                        <a href="https://doi.org/10.1021/acsabm.4c00418">https://doi.org/10.1021/acsabm.4c00418</a>.
                     </li>
                 </ol>
 
