Add Japanese translations for navigation links in gallery, projects, and research pages

--- a/templates/common/projects.html
+++ b/templates/common/projects.html
@@ -106,9 +106,9 @@
                         <li data-marker="*"><span class="fa-li"><i class="fas fa-square"></i></span><a
                                 href="../../index.html">🏠 Home</a> / <a href="../ja/index.html">🗾 ホーム</a></li>
                         <li data-marker="*"><span class="fa-li"><i class="fas fa-square"></i></span><a
-                                href="research.html">⚗️ Research</a></li>
+                                href="research.html">⚗️ Research / 研究</a></li>
                         <li data-marker="*"><span class="fa-li"><i class="fas fa-square"></i></span><a
-                                href="gallery.html">🖼️ Gallery</a></li>
+                                href="gallery.html">🖼️ Gallery / ギャラリー</a></li>
                     </ul>
                     <hr>
                     <div class="centered-container">
