--- a/templates/common/research.html
+++ b/templates/common/research.html
@@ -107,9 +107,9 @@
                         <li data-marker="*"><span class="fa-li"><i class="fas fa-square"></i></span><a
                                 href="../../index.html">🏠 Home</a> / <a href="../ja/index.html">🗾 ホーム</a></li>
                         <li data-marker="*"><span class="fa-li"><i class="fas fa-square"></i></span><a
-                                href="projects.html">🛠️ Projects</a></li>
+                                href="projects.html">🛠️ Projects / プロジェクト</a></li>
                         <li data-marker="*"><span class="fa-li"><i class="fas fa-square"></i></span><a
-                                href="gallery.html">🖼️ Gallery</a></li>
+                                href="gallery.html">🖼️ Gallery / ギャラリー</a></li>
                     </ul>
                     <hr>
                     <div class="centered-container">
