--- a/templates/common/gallery.html
+++ b/templates/common/gallery.html
@@ -108,9 +108,9 @@
                         <li data-marker="*"><span class="fa-li"><i class="fas fa-square"></i></span><a
                                 href="../../index.html">🏠 Home</a> / <a href="../ja/index.html">🗾 ホーム</a></li>
                         <li data-marker="*"><span class="fa-li"><i class="fas fa-square"></i></span><a
-                                href="projects.html">🛠️ Projects</a></li>
+                                href="projects.html">🛠️ Projects / プロジェクト</a></li>
                         <li data-marker="*"><span class="fa-li"><i class="fas fa-square"></i></span><a
-                                href="research.html">⚗️ Research</a></li>
+                                href="research.html">⚗️ Research / 研究</a></li>
                     </ul>
                     <hr>
                     <div class="centered-container">
