Add educational background section to index.html

--- a/templates/ja/index.html
+++ b/templates/ja/index.html
@@ -158,6 +158,14 @@
 
                 <p>どうぞよろしくお願いいたします。</p>
 
+                <h2>履歴</h2>
+                <ul>
+                    <li>St. Edmund Preparatory High School (2016年6月卒業)</li>
+                    <li>カリフォルニア大学サンタバーバラ校機械工学科 (2020年6月卒業)</li>
+                    <li>大阪大学大学院物質創成専攻博士前期課程 (2023年9月卒業)</li>
+                    <li>大阪大学大学院物質創成専攻博士後期課程 (2026年9月修了予定)</li>
+                </ul>
+
 
                 <h2>研究分野 <a
                         href="https://ja.wikipedia.org/wiki/3D%E3%83%90%E3%82%A4%E3%82%AA%E3%83%97%E3%83%AA%E3%83%B3%E3%83%86%E3%82%A3%E3%83%B3%E3%82%B0"><i
