Update research interest heading in index.html

--- a/templates/ja/index.html
+++ b/templates/ja/index.html
@@ -167,7 +167,7 @@
                 </ul>
 
 
-                <h2>研究分野 <a
+                <h2>研究への関心 <a
                         href="https://ja.wikipedia.org/wiki/3D%E3%83%90%E3%82%A4%E3%82%AA%E3%83%97%E3%83%AA%E3%83%B3%E3%83%86%E3%82%A3%E3%83%B3%E3%82%B0"><i
                             class="fa-brands fa-wikipedia-w"></i></a></h2>
                 <p>
