--- a/templates/ja/index.html
+++ b/templates/ja/index.html
@@ -159,11 +159,35 @@
                 <p>どうぞよろしくお願いいたします。</p>
 
                 <h2>履歴</h2>
-                <ul>
-                    <li>St. Edmund Preparatory High School (2016年6月卒業)</li>
-                    <li>カリフォルニア大学サンタバーバラ校機械工学科 (2020年6月卒業)</li>
-                    <li>大阪大学大学院物質創成専攻博士前期課程 (2023年9月卒業)</li>
-                    <li>大阪大学大学院物質創成専攻博士後期課程 (2026年9月修了予定)</li>
+                <ul style="margin-top: 0em; margin-bottom: 0em; list-style: none; padding-left: 0;">
+                    <li>
+                        <a href="https://www.ucsb.edu" target="_blank" class="logo-link">
+                            <img src="/static/logo/UCSB_seal.png" alt="UC Santa Barbara" class="university-logo">
+                        </a>
+                        カリフォルニア大学サンタバーバラ校機械工学科 (2020年6月卒業)
+                    </li>
+                </ul>
+                <ul style="margin-top: 0em; margin-bottom: 0em; list-style: none; padding-left: 0;">
+                    <li>
+                        <a href="https://engineering.ucsb.edu/" target="_blank" class="logo-link">
+                            <img src="/static/logo/UCSB_logo.png" alt="UC Santa Barbara" class="university-logo">
+                        </a>
+                        カリフォルニア大学サンタバーバラ校熱流体エネルギー研究室 助手 (2020年6月~2021年9月)
+                    </li>
+                </ul>
+                <ul style="margin-top: 0em; margin-bottom: 0em; list-style: none; padding-left: 0;">
+                    <li>
+                        <a href="https://www.osaka-u.ac.jp" target="_blank" class="logo-link">
+                            <img src="/static/logo/OsakaU_logo.png" alt="Osaka University" class="university-logo">
+                        </a>
+                        大阪大学大学院物質創成専攻博士前期課程 (2023年9月卒業)
+                    </li>
+                    <li>
+                        <a href="https://www.osaka-u.ac.jp" target="_blank" class="logo-link">
+                            <img src="/static/logo/OsakaU_logo.png" alt="Osaka University" class="university-logo">
+                        </a>
+                        大阪大学大学院物質創成専攻博士後期課程 (2026年9月修了予定)
+                    </li>
                 </ul>
 
 
