Add educational background section to Japanese index.html

--- a/templates/ja/index.html
+++ b/templates/ja/index.html
@@ -159,6 +159,15 @@
                 <p>どうぞよろしくお願いいたします。</p>
 
                 <h2>履歴</h2>
+                <ul style="margin-top: 0em; margin-bottom: 0.6em; list-style: none; padding-left: 0;">
+
+                    <li>&nbsp;<i class="fa-solid fa-graduation-cap fa-xl"></i>&nbsp; St. Edmund
+                        Preparatory
+                        High
+                        School
+                        (2016年6月卒業)
+                    </li>
+                </ul>
                 <ul style="margin-top: 0em; margin-bottom: 0em; list-style: none; padding-left: 0;">
                     <li>
                         <a href="https://www.ucsb.edu" target="_blank" class="logo-link">
@@ -223,7 +232,8 @@
                 <h2>学術論文</h2>
                 <ol>
                     <li><b>Colin Zhang</b>, Kelum Elvitigala, Wildan Mubarok, Yasunori Okano, and Shinji Sakai.
-                        Machine learning-based prediction and optimisation framework for as-extruded cell viability in
+                        Machine learning-based prediction and optimisation framework for as-extruded cell viability
+                        in
                         extrusion-based 3D bioprinting. <i>Virtual and Physical Prototyping</i> <b>19</b>, e2400330
                         (2024).
                         <br>
@@ -233,7 +243,8 @@
                     </li>
                     <li>Mitsuyuki Hidaka, Masaru Kojima, <b>Colin Zhang</b>, Yasunori Okano, and Shinji Sakai.
                         Experimental and numerical approaches for optimizing conjunction area design to enhance
-                        switching efficiency in single-nozzle multi-ink bioprinting systems. <i>International Journal of
+                        switching efficiency in single-nozzle multi-ink bioprinting systems. <i>International
+                            Journal of
                             Bioprinting</i> <b>10</b>, 4091 (2024).
                         <br>
                         <a href="https://doi.org/10.36922/ijb.4091">https://doi.org/10.36922/ijb.4091</a>.
