--- a/templates/ja/index.html
+++ b/templates/ja/index.html
@@ -161,7 +161,7 @@
                 <h2>履歴</h2>
                 <ul style="margin-top: 0em; margin-bottom: 0.6em; list-style: none; padding-left: 0;">
 
-                    <li>&nbsp;<i class="fa-solid fa-graduation-cap fa-xl"></i>&nbsp; St. Edmund
+                    <li><i class="fa-solid fa-graduation-cap fa-xl"></i>&nbsp; &nbsp;St. Edmund
                         Preparatory
                         High
                         School
