Refactor code structure for improved readability and maintainability

--- a/templates/ja/index.html
+++ b/templates/ja/index.html
@@ -26,7 +26,7 @@
     </script>
     <meta name="viewport" content="initial-scale=1, width=device-width">
     <meta property="og:image" content="static/web_screenshot.png">
-    <link href="../../static/home.png" rel="icon">
+    <link href="../../static/home_2.png" rel="icon">
     <link href="../../static/styles.css" rel="stylesheet">
     <link rel="preload" href="static/GraphicalAbstract1.png" as="image">
 
@@ -186,13 +186,15 @@
                     <ul style="margin-top: 0em; margin-bottom: 0em; list-style: none; padding-left: 0;">
                         <li>
                             <a href="https://www.osaka-u.ac.jp" target="_blank" class="logo-link">
-                                <img src="/static/logo/OsakaU_logo.png" alt="Osaka University" class="university-logo">
+                                <img src="/static/logo/OsakaU_logo.png" alt="The University of Osaka"
+                                    class="university-logo">
                             </a>
                             大阪大学大学院 物質創成専攻 博士前期課程 (2023年9月卒業)
                         </li>
                         <li>
                             <a href="https://www.osaka-u.ac.jp" target="_blank" class="logo-link">
-                                <img src="/static/logo/OsakaU_logo.png" alt="Osaka University" class="university-logo">
+                                <img src="/static/logo/OsakaU_logo.png" alt="The University of Osaka"
+                                    class="university-logo">
                             </a>
                             大阪大学大学院 物質創成専攻 博士後期課程 (2026年9月修了予定)
                         </li>
