--- a/templates/common/gallery.html
+++ b/templates/common/gallery.html
@@ -26,7 +26,7 @@
     </script>
     <meta name="viewport" content="initial-scale=1, width=device-width">
     <meta property="og:image" content="static/web_screenshot.png">
-    <link href="https://upload.wikimedia.org/wikipedia/commons/3/34/Home-icon.svg" rel="icon">
+    <link href="../../static/home_2.png" rel="icon">
     <link href="../../static/styles.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
