--- a/templates/common/gallery.html
+++ b/templates/common/gallery.html
@@ -43,7 +43,8 @@
         <div class="row">
             <aside class="col-lg">
                 <header>
-                    <h1><a href="../../index.html">COLIN</a></h1>
+                    <h1><a href="../../index.html">COLIN <img src="/static/home_2.png" alt="Home Icon"
+                                class="home-icon"></a></h1>
                     <div class="top-bar">
                         <span>Gallery</span>
                         <button id="theme-toggler" class="theme-button">
