--- a/templates/ja/index.html
+++ b/templates/ja/index.html
@@ -45,7 +45,7 @@
         <div class="row">
             <aside class="col-lg">
                 <header>
-                    <h1><a href="">コリン</a></h1>
+                    <h1><a href="">コリン <img src="/static/home_2.png" alt="Home Icon" class="home-icon"></a></h1>
 
                     <div class="top-bar">
                         <span>
