Add ORCID link and caption for improved citation clarity

--- a/templates/common/research.html
+++ b/templates/common/research.html
@@ -226,6 +226,8 @@
                                 <img src="../../assets/ORCID.png" alt="ORCID" width="120"
                                     style="max-width: 100%; height: auto;">
                             </a>
+                            <figcaption style="font-size: smaller; text-align: center;">
+                                <a href="https://orcid.org/0009-0009-2411-9640">ORCID: 0009-0009-2411-9640</a>
                         </figure>
                     </div>
                 </div>
