--- a/templates/ja/index.html
+++ b/templates/ja/index.html
@@ -51,9 +51,8 @@
                         <span>
                             <a href="../../index.html" class="language-link"
                                 style="display: inline-flex; align-items: center;">
-                                <strong>ENGLISH</strong>
-                                <i class="fa-solid fa-language"
-                                    style="font-size: 1.35em; margin-left: 0.2em; line-height: 1;"></i>
+                                <strong>ENGLISH&nbsp;</strong>
+                                <img src="/static/Flag_of_the_United_States.png" alt="US Flag" class="flag-icon">
                             </a>
                         </span>
 
