Add multilingual support to section titles in gallery, projects, and research pages

--- a/templates/common/projects.html
+++ b/templates/common/projects.html
@@ -44,7 +44,7 @@
                     <h1><a href="../../index.html">COLIN <img src="/static/home_2.png" alt="Home Icon"
                                 class="home-icon"></a></h1>
                     <div class="top-bar">
-                        <span>Projects</span>
+                        <span>Projects / プロジェクト</span>
                         <button id="theme-toggler" class="theme-button">
                             <i id="theme-icon" class="fas fa-moon" style="color: #ffbe3c;"></i>
                         </button>
