Add target="_blank" to BioRender links for improved user experience

--- a/templates/ja/index.html
+++ b/templates/ja/index.html
@@ -216,7 +216,7 @@
                     <figcaption style="text-align: left;"><strong>図1.
                         </strong>バイオプリンティング最適化のためのワークフロー:
                         レオロジー試験で得られたインクの特性を基に、針の押出しプロセスの数値シミュレーションが行われ、その後、ライブ/デッド細胞生存率解析が実施される。機械学習モデルは、細胞の種類、インクの粘度、押出しパラメータを統合し、細胞生存率を予測・最適化する。
-                        <a href="https://www.biorender.com/">BioRender</a>で作成。
+                        <a href="https://www.biorender.com/" target="_blank">BioRender</a>で作成。
                     </figcaption>
                 </figure>
                 <figure style="text-align: center;">
@@ -227,7 +227,7 @@
                     <figcaption style="text-align: left;"><strong>図2.
                         </strong>AIを活用した印刷性能（プリンタビリティ）評価フレームワークの概要。アルギン酸（ALG）およびヒアルロン酸（HA）複合インクのレオロジー特性は、サポートベクター回帰（SVR）によってモデリングされ、レオロジー
                         パラメータを予測する。回帰型のMLPモデルは、ハウスドルフ距離（HD）および細胞生存率を予測するために使用される。HD指標は、印刷構造と設計構造との幾何学的忠実度を定量的に評価し、回帰型CNNはグリッド画像からHD値を直接予測する。<a
-                            href="https://www.biorender.com/">BioRender</a>にて作成。</figcaption>
+                            href="https://www.biorender.com/" target="_blank">BioRender</a>にて作成。</figcaption>
                 </figure>
 
                 <h2>学術論文</h2>
